# tfm-model-unir

./: .gitignore  Plan_Implementacion_Fase2_TFE.md  README.md  compass_artifact_wf-b46d5cb0-8758-4bab-9bca-b261e7edaf7e_text_markdown.md  pyproject.toml
configs/: config.yaml  train_ppo.yaml
configs/env/: portfolio_default.yaml
configs/eval/: stress_subperiods.yaml
configs/experiment/: agent_a.yaml  agent_b.yaml
configs/ppo/: default.yaml  smoke.yaml
configs/timegan/: default.yaml
configs/timegan/eval/: default.yaml
configs/timegan/generation/: default.yaml
configs/timegan/training/: default.yaml  smoke.yaml
notebooks/: 01_eda.ipynb  02_train_timegan_kaggle.ipynb  03_train_ppo_kaggle.ipynb
scripts/: 01_download_data.py  02_build_features.py  03_train_timegan.py  04_evaluate_synthetic.py  05_train_agent.py  06_backtest_agent.py
src/agents/: __init__.py  callbacks.py  env_factory.py  ppo_trainer.py
src/data/: alignment.py  download.py  features.py  mixed_dataset.py  scalers.py  sequence_builder.py  splits.py  state_builder.py
src/envs/: __init__.py  portfolio_env.py  rewards.py  transaction_costs.py
src/eval/: backtest.py  baselines.py  metrics.py  plots.py  runner.py  stylized_facts.py
src/generative/: __init__.py
src/generative/timegan/: __init__.py  build_synthetic_dataset.py  generate.py  metrics.py  model.py  reconstruct_prices.py  stylized_facts_compare.py  train.py
src/utils/: __init__.py  seeding.py
tests/: test_agents.py  test_data.py  test_env.py  test_eval.py  test_experiments.py  test_metrics.py  test_no_leakage.py  test_stylized_facts.py  test_timegan_metrics.py
