[project]
name = "tfe-drl-portfolio"
version = "0.1.0"
description = "TFE Máster IA UNIR — Robustez DRL con TimeGAN para gestión de carteras"
requires-python = "==3.11.*"
readme = "README.md"
authors = [
    { name = "Diegbys Mudarra" },
    { name = "Andrés Pereira" },
]

# Fase 1 only: solo lo necesario para descargar, alinear y testear datos.
# El resto del stack (PyTorch, SB3, Hydra, MLflow, pandas-ta) entra en su fase.
dependencies = [
    "numpy>=1.26,<2.0",
    "pandas>=2.2,<2.3",
    "pyarrow>=15.0,<18.0",
    "yfinance>=0.2.40,<0.3",
    "pandas-datareader>=0.10.0,<0.11",
    "pandas_market_calendars>=4.4,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.4,<1.0",
    # análisis / EDA (Fase 2)
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<0.14",
    "scipy>=1.11,<2.0",
    "statsmodels>=0.14,<0.15",
    "pyyaml>=6.0,<7.0",
    "jupyter>=1.0,<2.0",
    "ipykernel>=6.29,<7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
